--- a/src/main/resources/templates/messenger/messenger.html
+++ b/src/main/resources/templates/messenger/messenger.html
@@ -16,19 +16,27 @@
         <!---->
         <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
         <!---->
-        <div class="container text-secondary fs-6 my-5" th:attr="data-author=${currentUser.userInformation.id}">
+        <div class="container text-secondary my-5" th:attr="data-author=${currentUser.userInformation.id}">
             <!---->
-            <div class="row p-3 p-sm-0">
-                <div class="messenger-contacts-block border rounded fs-5 p-2 pb-0" th:classappend="${param.recipientId} ? 'col-3 d-none d-md-block' : 'col-12 col-md-3'" id="contacts-block">
+            <div class="row fs-6 px-3 px-sm-0">
+                <div class="messenger-contacts-block border rounded fs-5 p-2" th:classappend="${param.recipientId} ? 'col-3 d-none d-md-block' : 'col-12 col-md-3'" id="contacts-block">
                     <h2 class="fs-4 mb-0">Контакты</h2>
                     <hr class="my-2" />
                     <div th:each="each, status : ${recipients}" th:classappend="${!status.last} ? 'mb-3'">
-                        <img width="24" src="../../static/svg/profile.svg" th:src="@{/svg/profile.svg}" alt="Получатель" />
-                        <a href="#" th:href="@{/messages?recipientId=__${each.id}__}" class="text-secondary text-decoration-none" th:text="${each.fullName}">Петров Иван Ильич</a>
+                        <div th:classappend="${#strings.equals(each.id, param.recipientId)} ? 'bg-selected-recipient rounded p-1'">
+                            <img width="24" src="../../static/svg/recipient.svg" th:src="@{/svg/recipient.svg}" alt="Получатель" />
+                            <a href="#" th:href="@{/messenger?recipientId=__${each.id}__}" class="text-secondary text-decoration-none" th:text="${each.fullName}">Петров Иван Ильич</a>
+                        </div>
                     </div>
                 </div>
                 <div class="messenger-messages-block d-flex flex-column align-items-between justify-content-between border rounded p-2" th:classappend="${param.recipientId} ? 'col-12 col-md-9' : 'col-9 d-none d-md-block'">
-                    <div class="flex-grow-1 o mb-1" id="messages-block" style="overflow-y: auto">
+                    <div class="mb-2 fs-5" th:if="${param.recipientId}">
+                        <div class="border rounded bg-selected-recipient p-2">
+                            <img width="24" src="../../static/svg/recipient.svg" th:src="@{/svg/recipient.svg}" alt="Получатель" />
+                            <a href="#" th:href="@{/messenger?recipientId=__${recipient.id}__}" class="text-secondary text-decoration-none" th:text="${recipient.fullName}">Петров Иван Ильич</a>
+                        </div>
+                    </div>
+                    <div class="flex-grow-1 messenger-messages-list-block" id="messages-block">
                         <div class="col-12" th:each="each, status : ${messages}" th:classappend="${!status.last} ? 'mb-2'">
                             <div class="col-10 me-auto text-start" th:if="${currentUser.userInformation.id == each.authorId}">
                                 <div class="border p-2 rounded bg-message-author d-inline-block w-auto text-start text-black" th:text="${each.text}">Текст1</div>
@@ -38,8 +46,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mt-1">
-                        <form action="#" method="post" class="border rounded bg-form p-3" id="message-form">
+                    <div class="mt-2 fs-5" th:if="${param.recipientId}">
+                        <form action="#" method="post" class="border rounded bg-form p-2" id="message-form">
                             <input class="visually-hidden" name="id" />
                             <div class="d-flex flex-row align-items-center justify-content-between">
                                 <textarea name="message" id="message" class="form-control flex-grow-1 me-2" rows="1" placeholder="Текст сообщения..."></textarea>
@@ -52,26 +60,13 @@
                 </div>
             </div>
             <!---->
-            <!--<div class="row p-3 p-sm-0" th:classappend="${param.recipientId} ? 'd-block' : 'd-none'">
-                <form action="#" method="post" class="border rounded bg-form p-3" id="message-form">
-                    <input class="visually-hidden" name="id" />
-                    <div class="d-flex flex-row align-items-center justify-content-between">
-                        <textarea name="message" id="message" class="form-control flex-grow-1 me-2" rows="1" placeholder="Текст сообщения..."></textarea>
-                        <a href="#" id="send" class="text-decoration-none ms-2 mt-auto">
-                            <img width="32" src="../../static/svg/send.svg" th:src="@{/svg/send.svg}" alt="Отправить" />
-                        </a>
-                    </div>
-                </form>
-            </div>-->
-            <!---->
         </div>
         <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js" th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}"></script>
-        <script src="../../static/js/messages/dialogue.js" th:src="@{/js/messages/dialogue.js}"></script>
+        <script src="../../static/js/messenger/messenger.js" th:src="@{/js/messenger/messenger.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
