Добавил отдельный стиль для формы сообщений в мессенджере: сделал так, чтобы textarea не рос до бесконечности, а от 35% длины добавлялся скроллбар.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -99,6 +99,16 @@ form,
     width: 0px;
 }
 
+.messenger-message-form {
+    background-color: #f2f3f5;
+    max-height: 35vh;
+    overflow-y: auto;
+}
+
+.messenger-message-form::-webkit-scrollbar {
+    width: 0px;
+}
+
 .bg-message-author {
     background-color: #f2f5f8;
 }
