--- a/src/main/resources/templates/messenger/messenger.html
+++ b/src/main/resources/templates/messenger/messenger.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="mt-2 fs-5" th:if="${param.recipientId}">
-                        <form action="#" method="post" class="border rounded bg-form p-2" id="message-form">
+                        <form action="#" method="post" class="messenger-message-form border rounded p-2" id="message-form">
                             <input class="visually-hidden" name="id" />
                             <div class="d-flex flex-row align-items-center justify-content-between">
                                 <textarea name="message" id="message" class="form-control flex-grow-1 me-2" rows="1" placeholder="Текст сообщения..."></textarea>
