--- a/src/main/resources/templates/fragments/headers/main-admin-header.html
+++ b/src/main/resources/templates/fragments/headers/main-admin-header.html
@@ -30,6 +30,9 @@
                                 <li>
                                     <a href="#" th:href="@{/contacts}" class="nav-link text-secondary">Контактная информация</a>
                                 </li>
+                                <li>
+                                    <a href="#" th:href="@{/messenger}" class="nav-link text-secondary">Мессенджер</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -41,10 +44,6 @@
                             <ul aria-labelledby="user" class="dropdown-menu text-small">
                                 <li>
                                     <a class="dropdown-item" href="#" th:href="@{/users/__${currentUser.userInformation.id}__}">Профиль</a>
-                                </li>
-                                <hr class="dropdown-divider" />
-                                <li>
-                                    <a class="dropdown-item" href="#" th:href="@{/messenger}">Мессенджер</a>
                                 </li>
                                 <hr class="dropdown-divider" />
                                 <li>
