--- a/src/main/resources/templates/fragments/headers/patient-header.html
+++ b/src/main/resources/templates/fragments/headers/patient-header.html
@@ -24,6 +24,9 @@
                                 <li>
                                     <a href="#" th:href="@{${currentUser.hasAnamnesis} ? '/anamnesis/for/__${currentUser.id}__' : '/anamnesis/form'}" class="nav-link text-secondary">Анамнез</a>
                                 </li>
+                                <li>
+                                    <a href="#" th:href="@{/messenger}" class="nav-link text-secondary">Мессенджер</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -35,10 +38,6 @@
                             <ul aria-labelledby="user" class="dropdown-menu text-small">
                                 <li>
                                     <a class="dropdown-item" href="#" th:href="@{/users/__${currentUser.userInformation.id}__}">Профиль</a>
-                                </li>
-                                <hr class="dropdown-divider" />
-                                <li>
-                                    <a class="dropdown-item" href="#" th:href="@{/messenger}">Мессенджер</a>
                                 </li>
                                 <hr class="dropdown-divider" />
                                 <li>
