Во всех модальных окнах заменил цвет заголовка с чёрного на text-secondary под общий стиль приложения.

--- a/src/main/resources/templates/fragments/modal/code-input-modal.html
+++ b/src/main/resources/templates/fragments/modal/code-input-modal.html
@@ -7,11 +7,11 @@
         <div th:fragment="code-input-modal" class="modal fade" id="code-input-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header text-secondary">
                         <h1 class="modal-title fs-4">Ввод кода</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-5">
+                    <div class="modal-body text-secondary fs-5">
                         <div class="visually-hidden mb-2 mt-1" id="code-input-error">
                             <div class="text-center fs-5 danger-block rounded h-100">
                                 <p class="mb-1 my-auto">Неверный код</p>
