--- a/src/main/resources/templates/users/modal/inactivity-selection-modal.html
+++ b/src/main/resources/templates/users/modal/inactivity-selection-modal.html
@@ -8,7 +8,7 @@
         <div th:fragment="inactivity-selection-modal" class="modal fade" id="inactivity-selection-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header text-secondary">
                         <h1 class="modal-title fs-4" id="inactivity-selection-modal-title">Опция</h1>
                         <button id="inactivity-selection-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
