Исправил ошибку в профиле юзера при проверке прав доступа на редактирование общей информации. В js-коде по работе с заявками сделал так, чтобы к URL не добавлялся хэш при удалении заявки.

--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -68,7 +68,7 @@
                         Общая информация
                         <a
                             href="#"
-                            th:if="${(isSelf || isCurrentUserAdminFromSameHospital) && (user.isHospitalEmployee && !user.isDismissed || user.isPatient && user.isActive)}"
+                            th:if="${isSelf || isCurrentUserAdminFromSameHospital && (user.isHospitalEmployee && !user.isDismissed || user.isPatient && user.isActive)}"
                             data-bs-toggle="modal"
                             data-bs-target="#user-info-editing-modal"
                             class="text-decoration-none"
