--- a/src/main/resources/templates/messenger/messenger.html
+++ b/src/main/resources/templates/messenger/messenger.html
@@ -44,21 +44,24 @@
                                     <div th:text="${each.text}">Сообщение автора</div>
                                     <div class="d-flex flex-row align-items-center justify-content-between">
                                         <div>
-                                            <a href="#" class="text-decoration-none d-none">
+                                            <a href="#" class="text-decoration-none">
                                                 <img width="16" src="../../static/svg/msgedit.svg" th:src="@{/svg/msgedit.svg}" alt="Редактировать" />
                                             </a>
-                                            <a href="#" class="text-decoration-none d-none">
+                                            <a href="#" class="text-decoration-none">
                                                 <img width="16" src="../../static/svg/msgdelete.svg" th:src="@{/svg/msgdelete.svg}" alt="Удалить" />
                                             </a>
                                         </div>
-                                        <div class="message-date text-end text-secondary" th:text="${each.formattedDate}">16:56</div>
+                                        <div class="message-date text-end text-secondary" th:text="${each.shortFormattedDate}" data-bs-toggle="tooltip" data-bs-placement="left" th:attr="title=${each.longFormattedDate}">16:56</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-10 ms-auto text-end" th:if="${currentUser.userInformation.id != each.authorId}">
                                 <div class="message-recipient border p-2 rounded d-inline-block w-auto text-start text-black">
                                     <div th:text="${each.text}">Сообщение получателя</div>
-                                    <div class="message-date text-end text-secondary" th:text="${each.formattedDate}">16:56</div>
+                                    <div class="d-flex flex-row align-items-center justify-content-between">
+                                        <div></div>
+                                        <div class="message-date text-end text-secondary" th:text="${each.shortFormattedDate}" data-bs-toggle="tooltip" data-bs-placement="left" th:attr="title=${each.longFormattedDate}">16:56</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -83,8 +86,8 @@
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js" th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}"></script>
-        <script src="../../static/js/messenger/messenger.js" th:src="@{/js/messenger/messenger.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
+        <script src="../../static/js/messenger/messenger.js" th:src="@{/js/messenger/messenger.js}"></script>
         <!---->
     </body>
 </html>
